...
      "ru": "YouTube",
      "ja": "ユーチューブ",
      "zh": "YouTube",
      "it": "YouTube",
      "fr": "YouTube",
      "es": "YouTube",
      "pl": "YouTube"
    },
    "tutorial_begin_title": {
      "en": "Welcome to the YouTube screen!",
      "de": "Willkommen auf dem YouTube-Bildschirm!",
      "ru": "Добро пожаловать на экран YouTube!",
      "ja": "YouTubeの画面へようこそ！",
...
      "ru": "Изображение",
      "ja": "画像",
      "zh": "图片",
      "it": "Immagine",
      "fr": "Image",
      "es": "Imagen",
      "pl": "Obraz"
    }
  },
  "DrawScreen": {
    "tutorial_begin_title": {
      "en": "Welcome to the drawing recognition!",
      "de": "Wilkommen zu der Zeichenerkennung!",
...
      "ru": "Настройки",
      "ja": "設定",
      "zh": "设置",
      "it": "Impostazioni",
      "fr": "Paramètres",
      "es": "Ajustes",
      "pl": "Ustawienia"
    },
    "restarts_app": {
      "en": "restarts app",
      "de": "startet app neu",
      "ru": "перезапускает приложение",
      "ja": "アプリの再起動",
...
